# diceydice

./: .pre-commit-config.yaml  Pipfile  pyproject.toml  setup.cfg
diceydice/: __init__.py  __main__.py  diceydice.py  evaluate.py  exceptions.py  lexer.py  parser.py  roller.py
tests/: test_diceydice.py  test_evaluate.py  test_lexer.py  test_parser.py
