[metadata]
name = diceydice
version = 0.1.0
author = abstiles
description = Fancy dice roller
url = https://github.com/abstiles/diceydice
project_urls =
    Bug Tracker = https://github.com/abstiles/dicedice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[mypy]
python_version = 3.9
strict = True
warn_unused_ignores = True
warn_unreachable = True
disallow_any_expr = True
